<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/uploadPicture"
        android:title="Upload Picture" />
    <item android:id="@+id/removePicture"
        android:title="Remove Picture" />
</menu>
