...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/stroke_bottom">
                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/profile_picture_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="123-123-1234"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/edit_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_edit_24" />
            </LinearLayout>
            <androidx.fragment.app.FragmentContainerView
...
