...
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="250dp"
                    app:cardBackgroundColor="@color/light_grey"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/profilePictureIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center|center_vertical"
                        android:src="@drawable/profile_edit"
                        android:background="@color/light_grey"/>
...
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"/>
        <Button
            android:enabled="false"
            android:id="@+id/signupSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"/>
    </LinearLayout>
</LinearLayout>

